# sf-compound-engineering-plugin

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRINCIPLES.md  README.md  pyproject.toml  schema.yaml  sfce.py
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
agents/: index.md  sf-adversarial-document-reviewer.agent.md  sf-adversarial-reviewer.agent.md  sf-apex-bulkification-reviewer.agent.md  sf-apex-exception-handler.agent.md  sf-apex-governor-guardian.agent.md  sf-apex-security-sentinel.agent.md  sf-apex-test-coverage-analyst.agent.md  sf-apex-trigger-architect.agent.md  sf-api-contract-reviewer.agent.md  sf-architecture-strategist.agent.md  sf-aura-migration-advisor.agent.md  sf-best-practices-researcher.agent.md  sf-bug-reproduction-validator.agent.md  sf-callout-pattern-reviewer.agent.md  sf-code-simplicity-reviewer.agent.md  sf-coherence-reviewer.agent.md  sf-correctness-reviewer.agent.md  sf-data-integrity-guardian.agent.md  sf-data-migrations-reviewer.agent.md  sf-data-model-architect.agent.md  sf-deployment-verification-agent.agent.md  sf-design-lens-reviewer.agent.md  sf-feasibility-reviewer.agent.md  sf-flow-complexity-analyzer.agent.md  sf-flow-governor-monitor.agent.md  sf-framework-docs-researcher.agent.md  sf-git-history-analyzer.agent.md  sf-integration-security-sentinel.agent.md  sf-issue-intelligence-analyst.agent.md  sf-learnings-researcher.agent.md  sf-lwc-accessibility-guardian.agent.md  sf-lwc-architecture-strategist.agent.md  (+27 more)
cli/: README.md  __init__.py  (+4 more)
(+185 files in other folders)
