[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sfce-cli"
version = "1.0.0"
description = "SF Compound Engineering - Spec-Driven Development for Salesforce"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Gella Sangamesh Gupta" }
]
keywords = [
    "salesforce",
    "spec-driven-development",
    "claude",
    "ai",
    "apex",
    "lwc",
    "cli"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]

[project.scripts]
sfce = "sfce:main"

[project.urls]
Homepage = "https://github.com/gellasangameshgupta/sf-compound-engineering-plugin"
Repository = "https://github.com/gellasangameshgupta/sf-compound-engineering-plugin"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build]
include = [
    "sfce.py",
    "__init__.py",
    "commands/*.md",
    "agents/**/*.md",
    "skills/**/*.md",
]
